# etf-fy

./: domaci  1 - sudoku.c  domaci 2 - ulancane liste, sortiranje.c  domaci1.py  domaci2.py
oop-project-f1/: CMakeLists.txt  Command.h  CommandBuilder.cpp  CommandBuilder.h  CommandHandler.cpp  CommandHandler.h  Exceptions.h  Parser.cpp  Parser.h  Pipeline.h  Reader.cpp  Reader.h  main.cpp
oop-project-f1/commands/: BatchCommand.h  DateCommand.h  EchoCommand.h  ExitCommand.h  HeadCommand.h  ImportCommands.h  PromptCommand.h  RemoveCommand.h  TimeCommand.h  TouchCommand.h  TrCommand.h  TruncateCommand.h  WordCountCommand.h
